add ping request
